improve the API spec
